--- a/assets/scss/components/_ticker.scss
+++ b/assets/scss/components/_ticker.scss
@@ -3,15 +3,15 @@
 
 .tricker {
     filter: grayscale(1) opacity(0.5);
-    padding: var(--section-padding-desktop) 0;
+    padding: var(--section-margin-tablet) 0;
     @include mixins.tablet {
-        padding: var(--section-padding-tablet) 0;
+        padding: var(--section-margin-tablet) 0;
     }
     @include mixins.mobile {
-        padding: var(--section-padding-mobile) 0;
+        padding: var(--section-margin-mobile) 0;
     }
     @include mixins.xs {
-        padding: var(--section-padding-mobile) 0;
+        padding: var(--section-margin-mobile) 0;
     }
     &__inner {
         width: 100%;
