--- a/assets/scss/base/_mixins.scss
+++ b/assets/scss/base/_mixins.scss
@@ -744,6 +744,33 @@
     }
 }
 
+@mixin avatar {
+    width: 56px;
+    min-width: 56px;
+    height: 56px;
+    min-height: 56px;
+    border-radius: 50px;
+    object-fit: cover;
+    @include tablet {
+        width: 48px;
+        min-width: 48px;
+        height: 48px;
+        min-height: 48px;
+    }
+    @include mobile {
+        width: 42px;
+        min-width: 42px;
+        height: 42px;
+        min-height: 42px;
+    }
+    @include xs {
+        width: 42px;
+        min-width: 42px;
+        height: 42px;
+        min-height: 42px;
+    }
+}
+
 @mixin line-clamp($lines: 2) {
     display: -webkit-box;
     -webkit-line-clamp: $lines;
@@ -766,7 +793,7 @@
 }
 
 @mixin media($breakpoint) {
-    @media (max-width: $breakpoint) {
+    @media (min-width: $breakpoint) {
         @content;
     }
 }
