--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -182,6 +182,10 @@
     --radius-sm: 16px;
     --radius-md: 20px;
     --radius-lg: 24px;
+    /* ----------------------------------------- */
+    /*                ANIMATION                  */
+    /* ----------------------------------------- */
+    --ease-back: cubic-bezier(0.34, 1.56, 0.64, 1);
 }
 
 /* ----------------------------------------- */
